Добавил flip-эффект для карточки на главной странице

--- a/source/template/pages/index.pug
+++ b/source/template/pages/index.pug
@@ -44,7 +44,7 @@ block content
                             +checkbox('radio','Не уверен (O_O)','radio','0')
                     +nav('welcome-menu',
                         {
-                          'На главную':'./index.html',
+                          'На главную':'',
                           'Войти':''
                         })
 block footer
