--- a/source/template/blocks/hamburger.pug
+++ b/source/template/blocks/hamburger.pug
@@ -1,6 +1,6 @@
 mixin hamburger()
     .hamburger
-        a.hamburger-icon
-            span.hamburger-icon__line.hamburger-icon__line--top
-            span.hamburger-icon__line.hamburger-icon__line--middle
-            span.hamburger-icon__line.hamburger-icon__line--bottom
+        a#hamburger-icon
+            span.line.line-1
+            span.line.line-2
+            span.line.line-3
