--- a/source/template/pages/index.pug
+++ b/source/template/pages/index.pug
@@ -42,7 +42,7 @@ block content
                         .card__content-radio
                             +checkbox('radio','Да','radio','1')
                             +checkbox('radio','Не уверен (O_O)','radio','0')
-                    +nav('welcome-menu',
+                    +nav('welcome-menu-auth',
                         {
                           'На главную':'',
                           'Войти':''
