--- a/source/style/pages/_welcom.scss
+++ b/source/style/pages/_welcom.scss
@@ -12,6 +12,7 @@
     }
     @include tablets() {
         padding: rem(20px) rem(20px) rem(392px) rem(20px);
+        background: url("../img/bg-forest.png") no-repeat center/cover;
     }
     @include phones() {
         padding: rem(4px) rem(15px) rem(157px) rem(11px);
@@ -44,4 +45,30 @@
         margin: auto;
         display: block;
     }
+}
+
+.welcome-background {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    @include tablets() {
+        display: none;
+    }
+}
+
+.welcome-background::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    min-height: 100%;
+    background: linear-gradient(135deg, rgba(0, 0, 0, 0.5), transparent 50%, rgba(0, 0, 0, 0.5));
+}
+
+.welcome-background-canvas {
+    min-height: 100%;
 }
