Поправил верстку, исправил работу blur

--- a/source/style/blocks/_arrow.scss
+++ b/source/style/blocks/_arrow.scss
@@ -19,6 +19,7 @@
         }
     }
     &--feedback {
+        position: relative;
         margin: 0 auto;
         transform: rotate(180deg);
         @include tablets() {
