--- a/source/style/blocks/_feedback-form.scss
+++ b/source/style/blocks/_feedback-form.scss
@@ -23,9 +23,9 @@
     filter: blur(20px);
     background-image: url('../img/bg-works.png');
     @include centered(full);
-    background-position: center;
+    width: 100%;
+    height: 100%;
     background-repeat: no-repeat;
-    background-size: 946px;
     z-index: -1;
 }
 
