--- a/source/style/blocks/_header.scss
+++ b/source/style/blocks/_header.scss
@@ -56,7 +56,7 @@
         padding: 29px 29px 29px 30px;
     }
     @include smallPhones() {
-        padding: 11px 7px 0 15px;
+        padding: 11px 15px;
     }
 }
 
