--- a/source/style/blocks/_reviews-section.scss
+++ b/source/style/blocks/_reviews-section.scss
@@ -15,15 +15,21 @@
 
 .reviews-background {
     @include centered(full);
-    top: rem(330px);
+    margin: auto;
+    min-width: 1200px;
     z-index: 0;
-    background: url('../img/bg-works.png') no-repeat center / cover;
+    // background: url('../img/bg-works.png') no-repeat center / cover;
 }
 
 .reviews-background__img {
+    max-width: 180%;
     display: block;
-    width: 100%;
     height: 100%;
+    margin: auto;
+    @include centered(full);
+    @include tablets() {
+        height: 100%;
+    }
 }
 
 .reviews__list {
