--- a/source/style/helpers/_settings.scss
+++ b/source/style/helpers/_settings.scss
@@ -61,9 +61,9 @@ button {
 
 .wrapper {
     font-family: 'roboto', sans-serif;
-    min-width: 300px;
     padding: 0;
     position: relative;
     width: 100%;
     height: 100%;
+    overflow: hidden;
 }
