--- a/source/style/pages/_welcom.scss
+++ b/source/style/pages/_welcom.scss
@@ -1,6 +1,6 @@
 .welcome {
     //-background: url("../img/bg-forest.png") no-repeat center/cover;
-    height: 100%;
+    min-height: 100vh;
     width: 100%;
     display: flex;
     flex-direction: column;
