--- a/source/template/pages/works.pug
+++ b/source/template/pages/works.pug
@@ -40,8 +40,8 @@ block content
             img(src="assets/img/leaf1.png" alt="leaf 1").leaf.leaf1
             img(src="assets/img/leaf2.png" alt="leaf 2").leaf.leaf2
             img(src="assets/img/leaf3.png" alt="leaf 3").leaf.leaf3
-            .reviews-background.js-reviews-background
-                //-img.reviews-background__img(src="assets/img/bg-works.png")
+            .reviews-background
+                img.reviews-background__img.js-reviews-background(src="assets/img/bg-works.png")
             +sectionTitle('about_header', 'Что обо мне говорят', 'reviews')
             ul.reviews__list
                 li.reviews__item
