pattern Module, add webpack

--- a/source/style/blocks/_arrow.scss
+++ b/source/style/blocks/_arrow.scss
@@ -27,8 +27,8 @@
         }
         @include phones() {
             position: relative;
-            top: rem(-149px);
-            left: rem(4px);
+            top: -155px;
+            left: 4px;
         }
     }
 }
