--- a/source/style/helpers/_settings.scss
+++ b/source/style/helpers/_settings.scss
@@ -13,13 +13,14 @@ html {
     width: 100%;
     font-size: $rootSize;
     -webkit-font-smoothing: antialiased;
-    font-smoothing: antialiased;
-    @include tablets() {
-        $rootSize: 15px;
-    }
-    @include phones() {
-        $rootSize: 14px;
-    }
+    // @include tablets() {
+    //     $rootSize: 15px;
+    //     font-size: $rootSize
+    // }
+    // @include phones() {
+    //     $rootSize: 14px;
+    //     font-size: $rootSize
+    // }
 }
 
 h1,
@@ -39,6 +40,7 @@ img {
 a {
     outline: none;
     text-decoration: none;
+    cursor: pointer;
     &:hover,
     &:active,
     &:focus {
