--- a/source/template/pages/blog.pug
+++ b/source/template/pages/blog.pug
@@ -11,10 +11,10 @@ block content
         +leftTriangle('blog')
         +rightTriangle('blog')
         .section__wrapper.blog__inner
-            aside.blog-sidebar
+            aside.blog-sidebar.js-blog-sidebar
                 ul.blog-sidebar__list.js-blog-sidebar__list
                     li.blog-sidebar__item.js-blog-sidebar__item.blog-sidebar__item--active
-                        a.blog-sidebar__link Самое важное в SASS
+                        a.blog-sidebar__link.js-blog-sidebar__link Самое важное в SASS
                     li.blog-sidebar__item.js-blog-sidebar__item
                         a.blog-sidebar__link Приёмы в вёрстке, без которых не обходится ни один сайт
                     li.blog-sidebar__item.js-blog-sidebar__item
