--- a/source/template/pages/index.pug
+++ b/source/template/pages/index.pug
@@ -7,7 +7,7 @@ block variables
 
 block content
     section.section.welcome
-        .welcome-background
+        .welcome-background#welcome-background
             canvas.welcome-background-canvas
         button.welcome__auth-btn Авторизоваться
         .card__wrapper
