--- a/source/style/blocks/_header.scss
+++ b/source/style/blocks/_header.scss
@@ -36,6 +36,10 @@
     }
 }
 
+.header-background--blog {
+    height: 535px;
+}
+
 .header-background__img {
     max-width: 180%;
     display: block;
@@ -88,13 +92,24 @@
 .header--blog {
     height: 405px;
     min-height: 405px;
-    padding: 14px 30px;
+    padding: rem(14px) rem(30px);
     @include tablets() {
         background: url('../img/bg-header.png') no-repeat center/cover;
+        height: 487px;
+    }
+    @include phones() {
+        padding: rem(12px) rem(11px) 0 rem(11px);
+        height: 554px;
     }
     .header__content {
         position: relative;
         transform: none;
-        margin-top: 30px;
+        margin-top: rem(30px);
+        @include tablets() {
+            margin-top: rem(64px);
+        }
+        @include phones() {
+            margin-top: 86px;
+        }
     }
 }
