--- a/source/style/blocks/_user.scss
+++ b/source/style/blocks/_user.scss
@@ -32,6 +32,9 @@
 .user--header {
     color: $white;
     margin-bottom: rem(30px);
+    @include tablets() {
+        margin-bottom: rem(37px);
+    }
     .user__name {
         font-size: rem(35px);
         @include phones() {
