--- a/source/template/blocks/mixins.pug
+++ b/source/template/blocks/mixins.pug
@@ -25,7 +25,7 @@ mixin sectionTitle(svg, title, modificator)
     .section-title(class=`section-title--${modificator}`)
         svg.section-title__img
             use(xlink:href="assets/img/sprite.svg#" + svg)
-        h2.section-title__text=title
+        h2.section-title__text(class=`section-title__text--${modificator}`)=title
 
 mixin blockTitle(title, status, modificator)
     if status=='line' && modificator
