--- a/source/style/pages/_blog.scss
+++ b/source/style/pages/_blog.scss
@@ -34,7 +34,7 @@
     }
     .fixed {
         position: fixed;
-        top: 1.25rem;
+        top: 2%;
         width: 15.5%;
         @include desctop() {
             width: 21.5%;
@@ -47,24 +47,18 @@
 }
 
 .blog-sidebar__item {
+    display: block;
+    font-size: 1rem;
+    color: $blockTitleColor;
+    @include roboto;
     list-style: none;
     margin-bottom: 35px;
     padding-right: 17px;
     cursor: pointer;
-}
-
-.blog-sidebar__item--active {
-    border-right: 3px solid $greenHover;
-    color: $greenHover;
-    font-size: $middleFont;
-    font-weight: $hardWeight;
-    line-height: 3;
-}
-
-.blog-sidebar__link {
-    display: inline-block;
-    line-height: 1.5;
-    vertical-align: middle;
+    &--active {
+        border-right: 3px solid $greenHover;
+        color: $greenHover;
+    }
 }
 
 .blog-article {
