--- a/source/template/pages/blog.pug
+++ b/source/template/pages/blog.pug
@@ -14,13 +14,13 @@ block content
             aside.blog-sidebar.js-blog-sidebar
                 ul.blog-sidebar__list.js-blog-sidebar__list
                     li.blog-sidebar__item.js-blog-sidebar__item.blog-sidebar__item--active
-                        a.blog-sidebar__link.js-blog-sidebar__link Самое важное в SASS
+                        | Самое важное в SASS
                     li.blog-sidebar__item.js-blog-sidebar__item
-                        a.blog-sidebar__link Приёмы в вёрстке, без которых не обходится ни один сайт
+                        | Приёмы в вёрстке, без которых не обходится ни один сайт
                     li.blog-sidebar__item.js-blog-sidebar__item
-                        a.blog-sidebar__link Что такое Flexbox?
+                        | Что такое Flexbox?
                     li.blog-sidebar__item.js-blog-sidebar__item
-                        a.blog-sidebar__link Антигерой CSS-разметки — свойство «display: table»
+                        | Антигерой CSS-разметки — свойство «display: table»
             .blog-article
 
                 article.blog-article__item
