Добавил главное меню

--- a/source/template/_template.pug
+++ b/source/template/_template.pug
@@ -4,6 +4,7 @@ include blocks/header
 include blocks/header-blog
 include blocks/footer
 include blocks/copyright
+include blocks/navigation
 
 block variables
 
@@ -35,3 +36,4 @@ html(lang="ru_RU")
             block content
             block footer
 
+        +navigation()
