--- a/source/template/blocks/hamburger.pug
+++ b/source/template/blocks/hamburger.pug
@@ -1,5 +1,5 @@
 mixin hamburger()
-    .hamburger
+    .hamburger.js-hamburger
         a#hamburger-icon
             span.line.line-1
             span.line.line-2
