--- a/source/template/pages/blog.pug
+++ b/source/template/pages/blog.pug
@@ -10,7 +10,7 @@ block content
     section.section.blog.js-section-content
         +leftTriangle('blog')
         +rightTriangle('blog')
-        .section__wrapper.blog__inner
+        .section__wrapper.blog__inner#blog
             aside.blog-sidebar.js-blog-sidebar
                 ul.blog-sidebar__list.js-blog-sidebar__list
                     li.blog-sidebar__item.js-blog-sidebar__item.blog-sidebar__item--active
